fix(nav): remove flicker on hover

--- a/src/app/front-end/nav/nav.component.scss
+++ b/src/app/front-end/nav/nav.component.scss
@@ -120,17 +120,6 @@ $nav-shaddow-light: rgba(0, 0, 0, .15);
       }
     }
 
-    .top-container,
-    .item {
-      a {
-        &,
-        &:hover,
-        &:active {
-          display: flex;
-        }
-      }
-    }
-
     .items {
       border-top: 1px solid $light-gray;
       display: block;
